--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -53,21 +53,23 @@
       <div class="option-info">
         <img src="assets/images/image-retro-pcs.jpg" alt="pc">
         <div class="info-text">
-          <h4>01</h4>
+          <h2>01</h2>
           <p class="bold-text">Reviving Retro PCs</p>
           <p>What happens when old PCs are given modern upgrades?</p>
         </div>
-        <div class="option-info">
+      </div>
+      <div class="option-info">
           <img src="assets/images/image-top-laptops.jpg" alt="pc">
           <div class="info-text">
-            <h4>02</h4>
+            <h2>02</h2>
             <p class="bold-text">Top 10 Laptops of 2022</p>
             <p>Our best picks for various needs and budgets.</p>
           </div>
-          <div class="option-info">
+      </div>
+      <div class="option-info">
             <img src="assets/images/image-gaming-growth.jpg" alt="pc">
             <div class="info-text">
-              <h4>03</h4>
+              <h2>03</h2>
               <p class="bold-text">The Growth of Gaming</p>
               <p>How the pandemic has sparked fresh opportunities.</p>
             </div>
