Ver 1.2.1: Added mobile responsiveness and also provided the menu/close button

--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
   <header>
+    <div class="menu-btn"><button><img src="assets/images/icon-menu.svg" alt=""></button></div>
     <nav>
       <div id="logo"><img src="assets/images/logo.svg" alt="company logo"></div>
-        <ul id="nav-options">
+        <ul class="nav-options show">
+          <button><img src="assets/images/icon-menu-close.svg" alt=""></button>
           <li>Home</li>
           <li>New</li>
           <li>Popular</li>
