Ver 1.2.2: added functionality to the button via main.js file

--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -13,8 +13,8 @@
     <div class="menu-btn"><button><img src="assets/images/icon-menu.svg" alt=""></button></div>
     <nav>
       <div id="logo"><img src="assets/images/logo.svg" alt="company logo"></div>
-        <ul class="nav-options show">
-          <button><img src="assets/images/icon-menu-close.svg" alt=""></button>
+        <ul class="nav-options">
+          <button class="show-btn"><img src="assets/images/icon-menu-close.svg" alt=""></button>
           <li>Home</li>
           <li>New</li>
           <li>Popular</li>
@@ -78,5 +78,6 @@
       </div>
     </div>
   </main>
+  <script src="main.js"></script>
 </body>
 </html>
