adding the overlay styling to the element beneath the sidebar menu

--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -9,6 +9,7 @@
   <title>Frontend Mentor | News homepage</title>
 </head>
 <body>
+  <div class="overlay"></div>
   <header>
     <div class="menu-btn"><button><img src="assets/images/icon-menu.svg" alt=""></button></div>
     <nav>
