--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="support-card-component">
+  <div class="support-card-component no-show">
     <div id="star-component">
       <img src="images/icon-star.svg" alt="star-icon">
     </div>
@@ -19,13 +19,25 @@
       <p>Please let us know how we did with your support request.All feedback is appreciated to help us improve our offering!</p>
     </div>
     <div id="rating-section">
-      <div class="rating-star">1</div>
-      <div class="rating-star">2</div>
-      <div class="rating-star">3</div>
-      <div class="rating-star">4</div>
-      <div class="rating-star">5</div>
+      <button class="rating-star">1</button>
+      <button class="rating-star">2</button>
+      <button class="rating-star">3</button>
+      <button class="rating-star">4</button>
+      <button class="rating-star">5</button>
     </div>
     <button id="submit-btn">Submit</button>
+  </div>
+  <div id="thank-you-card" class="support-card-component">
+    <div class="thank-you-img">
+      <img src="images/illustration-thank-you.svg" alt="Thank you message">
+      <div class="rating-display">
+        You selceted 4 out of 5
+      </div>
+    </div>
+    <div class="support-card-content center-text">
+      <h1>Thank You</h1>
+      <p>We appreciate you taking the time to give a rating, if you ever need more support don't hesitate to get in touch!</p>
+    </div>
   </div>
 </body>
 </html>
