added active states to the components of the support card and added an empty js file

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="support-card-component no-show">
+  <div class="support-card-component">
     <div id="star-component">
       <img src="images/icon-star.svg" alt="star-icon">
     </div>
@@ -39,5 +39,7 @@
       <p>We appreciate you taking the time to give a rating, if you ever need more support don't hesitate to get in touch!</p>
     </div>
   </div>
+
+  <script src="main.js"></script>
 </body>
 </html>
