added various functionality to button to enable and disable the selection and submit the selction made

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -31,7 +31,7 @@
     <div class="thank-you-img">
       <img src="images/illustration-thank-you.svg" alt="Thank you message">
       <div class="rating-display">
-        You selceted 4 out of 5
+        You didn't selected any rating out of 5
       </div>
     </div>
     <div class="support-card-content center-text">
