styled the showcase section for desktop screen size only

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -14,7 +14,7 @@
           <div id="icon-cum-menu">
             <img src="images/logo.svg" alt="Blogr Logo">
             <ul class="nav-options">
-              <li class="nav-text">Product
+              <li class="nav-text">Product <span><img src="images/icon-arrow-light.svg" alt=""></span>
                 <ul class="sub-options">
                   <li>Overview</li>
                   <li>Pricing</li>
@@ -23,7 +23,7 @@
                   <li>Integrations</li>
                 </ul>
               </li>
-              <li class="nav-text"> Company
+              <li class="nav-text"> Company <span><img src="images/icon-arrow-light.svg" alt=""></span>
                 <ul class="sub-options">
                   <li>About</li>
                   <li>Team</li>
@@ -31,7 +31,7 @@
                   <li>Careers</li>
                 </ul>
               </li>
-              <li class="nav-text">Connect
+              <li class="nav-text">Connect <span><img src="images/icon-arrow-light.svg" alt=""></span>
                 <ul class="sub-options">
                   <li>Contact</li>
                   <li>Newsletter</li>
@@ -41,7 +41,7 @@
             </ul>
           </div>
           <div id="buttons">
-            <button id="underline-btn">Login</button>
+            <a href="#">Log In</a>
             <button class="active-btn">Sign Up</button>
           </div>
         </nav>
@@ -50,7 +50,7 @@
             <p>Grow your audience and build your online brand</p>
             <div id="showcase-btns">
               <button class="active-btn">Start for Free</button>
-              <button class="border-btn">Learn More</button>
+              <button id="border-only" class="active-btn">Learn More</button>
             </div>
         </div>
       </header>
