some more element styled roughly

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -55,8 +55,8 @@
         </div>
       </header>
       <main>
+        <h2>Designed for the future</h2>
         <div class="basic-intro">
-          <h2>Designed for the future</h2>
           <div class="section-img">
             <img src="images/illustration-editor-desktop.svg" alt="intro-image">
           </div>
@@ -75,13 +75,13 @@
             </div>
           </div>
         </div>
-        <div class="special-infrastructure">
+        <div class="special-section">
           <div class="special-img">
             <img src="images/illustration-phones.svg" alt="specail-image">
           </div>
           <div class="special-text">
-            <h3>State of the Art Infrastructure</h3>
-            <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+            <h2 class="special-heading">State of the Art Infrastructure</h2>
+            <p class="special-content">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
               This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
           </div>
         </div>
