completed the desktop design responsiveness still on hold

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -14,7 +14,7 @@
           <div id="icon-cum-menu">
             <img src="images/logo.svg" alt="Blogr Logo">
             <ul class="nav-options">
-              <li class="nav-text">Product <span><img src="images/icon-arrow-light.svg" alt=""></span>
+              <li class="nav-text">Product <span><button class="icon"><img src="images/icon-arrow-light.svg" alt=""></button></span>
                 <ul class="sub-options">
                   <li>Overview</li>
                   <li>Pricing</li>
@@ -23,7 +23,7 @@
                   <li>Integrations</li>
                 </ul>
               </li>
-              <li class="nav-text"> Company <span><img src="images/icon-arrow-light.svg" alt=""></span>
+              <li class="nav-text"> Company <span><button class="icon"><img src="images/icon-arrow-light.svg" alt=""></button></span>
                 <ul class="sub-options">
                   <li>About</li>
                   <li>Team</li>
@@ -31,7 +31,7 @@
                   <li>Careers</li>
                 </ul>
               </li>
-              <li class="nav-text">Connect <span><img src="images/icon-arrow-light.svg" alt=""></span>
+              <li class="nav-text">Connect <span><button class="icon"><img src="images/icon-arrow-light.svg" alt=""></button></span>
                 <ul class="sub-options">
                   <li>Contact</li>
                   <li>Newsletter</li>
@@ -120,7 +120,7 @@
             </ul>
           </div>
           <div class="sections">
-            <p>Company</p>
+            <p class="bold">Company</p>
             <ul class="footer-options">
               <li>About</li>
               <li>Team</li>
@@ -129,7 +129,7 @@
             </ul>
           </div>
           <div class="sections">
-            <p>Connect</p>
+            <p class="bold">Connect</p>
             <ul class="footer-options">
               <li>Contact</li>
               <li>Newsletter</li>
