added mobile responsiveness to various screen size

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -44,6 +44,7 @@
             <a href="#">Log In</a>
             <button class="active-btn">Sign Up</button>
           </div>
+          <button id="menu-btn"><img src="images/icon-hamburger.svg" alt="Menu-btn"></button>
         </nav>
         <div id="showcase-section">
             <h1>A modern publishing platform</h1>
@@ -58,7 +59,8 @@
         <h2>Designed for the future</h2>
         <div class="basic-intro">
           <div class="section-img">
-            <img src="images/illustration-editor-desktop.svg" alt="intro-image">
+            <img class="desktop" src="images/illustration-editor-desktop.svg" alt="intro-image">
+            <img class="mobile" src="images/illustration-editor-mobile.svg" alt="intro-mobile img">
           </div>
           <div class="intro-text">
             <div class="text-top">
@@ -87,7 +89,8 @@
         </div>
         <div class="features">
           <div class="features-img">
-            <img src="images/illustration-laptop-desktop.svg" alt="featured-image">
+            <img class="desktop" src="images/illustration-laptop-desktop.svg" alt="featured-image">
+            <img class="mobile" src="images/illustration-laptop-mobile.svg" alt="intro-mobile img">
           </div>
           <div class="feature-text">
             <div class="text-top">
