--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -13,38 +13,40 @@
         <nav>
           <div id="icon-cum-menu">
             <img src="images/logo.svg" alt="Blogr Logo">
-            <ul class="nav-options">
-              <li class="nav-text">Product <span><button class="icon"><img src="images/icon-arrow-light.svg" alt=""></button></span>
-                <ul class="sub-options">
-                  <li>Overview</li>
-                  <li>Pricing</li>
-                  <li>Marketplace</li>
-                  <li>Features</li>
-                  <li>Integrations</li>
+            <div class="grouped mobile-expand">
+                <ul class="nav-options">
+                  <li class="nav-text">Product<span><button class="icon"><img id="Product" src="images/icon-arrow-light.svg" alt=""></button></span>
+                    <ul id="product" class="sub-options">
+                      <li>Overview</li>
+                      <li>Pricing</li>
+                      <li>Marketplace</li>
+                      <li>Features</li>
+                      <li>Integrations</li>
+                    </ul>
+                  </li>
+                  <li class="nav-text">Company<span><button class="icon"><img id="Company" src="images/icon-arrow-light.svg" alt=""></button></span>
+                    <ul id="company" class="sub-options">
+                      <li>About</li>
+                      <li>Team</li>
+                      <li>Blog</li>
+                      <li>Careers</li>
+                    </ul>
+                  </li>
+                  <li class="nav-text">Connect<span><button class="icon"><img id="Connect"src="images/icon-arrow-light.svg" alt=""></button></span>
+                    <ul id="connect" class="sub-options">
+                      <li>Contact</li>
+                      <li>Newsletter</li>
+                      <li>LinkedIn</li>
+                    </ul>
+                  </li>
                 </ul>
-              </li>
-              <li class="nav-text"> Company <span><button class="icon"><img src="images/icon-arrow-light.svg" alt=""></button></span>
-                <ul class="sub-options">
-                  <li>About</li>
-                  <li>Team</li>
-                  <li>Blog</li>
-                  <li>Careers</li>
-                </ul>
-              </li>
-              <li class="nav-text">Connect <span><button class="icon"><img src="images/icon-arrow-light.svg" alt=""></button></span>
-                <ul class="sub-options">
-                  <li>Contact</li>
-                  <li>Newsletter</li>
-                  <li>LinkedIn</li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-          <div id="buttons">
-            <a href="#">Log In</a>
-            <button class="active-btn">Sign Up</button>
-          </div>
+              <div id="buttons">
+                <a href="#">Log In</a>
+                <button class="active-btn">Sign Up</button>
+              </div>
+            </div>
           <button id="menu-btn"><img src="images/icon-hamburger.svg" alt="Menu-btn"></button>
+          <button id="close-btn"><img src="images/icon-close.svg" alt="close-btn"></button>
         </nav>
         <div id="showcase-section">
             <h1>A modern publishing platform</h1>
@@ -141,5 +143,6 @@
           </div>
         </div>
       </footer>
+      <script src="app.js"></script>
 </body>
 </html>
