--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -2,39 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | FAQ Accordion Card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="container">
+      <div id="img-container">
+          <div class="bg-img">
+            <img src="images/illustration-woman-online-desktop.svg" alt="Woman Image">
+          </div>
+          <div class="fg-img">
+            <img src="images/illustration-box-desktop.svg" alt="foreground-box">
+          </div>
+      </div>
+      <div id="faq-section">
+        <h1>FAQ</h1>
+        <div class="questions">
+          <div class="question-head">
+            <h4>How many team members can I invite?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+          </div>
+          <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
+            team members for the Premium plan.</p>
+        </div>
+        <div class="questions">
+          <div class="question-head">
+            <h4>What is the maximum file upload size?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+          </div>
+          <p class="answer">
+            No more than 2GB. All files in your account must fit your allotted storage space.
+          </p>
+        </div>
+        <div class="questions">
+          <div class="question-head">
+            <h4>How do I reset my password?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+          </div>
+          <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</p>
+        </div>
+        <div class="questions">
+          <div class="question-head">
+            <h4>Can I cancel my subscription?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+          </div>
+          <p class="answer">Yes! Send us a message and we'll process your request no questions asked.</p>
+        </div>
+        <div class="questions">
+          <div class="question-head">
+            <h4>Do you provide additional support?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+          </div>
+          <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
