--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -21,39 +21,40 @@
         <h1>FAQ</h1>
         <div class="questions">
           <div class="question-head">
-            <h4>How many team members can I invite?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+            <h4>How many team members can I invite?</h4><span><button class="accordian-btn"><img id="one" src="images/icon-arrow-down.svg" alt=""></button></span>
           </div>
-          <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
+          <p class="answer one">You can invite up to 2 additional users on the Free plan. There is no limit on 
             team members for the Premium plan.</p>
         </div>
         <div class="questions">
           <div class="question-head">
-            <h4>What is the maximum file upload size?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+            <h4>What is the maximum file upload size?</h4><span><button class="accordian-btn"><img id="two" src="images/icon-arrow-down.svg" alt=""></button></span>
           </div>
-          <p class="answer">
+          <p class="answer two">
             No more than 2GB. All files in your account must fit your allotted storage space.
           </p>
         </div>
         <div class="questions">
           <div class="question-head">
-            <h4>How do I reset my password?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+            <h4>How do I reset my password?</h4><span><button class="accordian-btn"><img id="three" src="images/icon-arrow-down.svg" alt=""></button></span>
           </div>
-          <p class="answer">Click “Forgot password” from the login page or “Change password” from your profile page.
+          <p class="answer three">Click “Forgot password” from the login page or “Change password” from your profile page.
             A reset link will be emailed to you.</p>
         </div>
         <div class="questions">
           <div class="question-head">
-            <h4>Can I cancel my subscription?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+            <h4>Can I cancel my subscription?</h4><span><button class="accordian-btn"><img id='four' src="images/icon-arrow-down.svg" alt=""></button></span>
           </div>
-          <p class="answer">Yes! Send us a message and we'll process your request no questions asked.</p>
+          <p class="answer four">Yes! Send us a message and we'll process your request no questions asked.</p>
         </div>
         <div class="questions">
           <div class="question-head">
-            <h4>Do you provide additional support?</h4><span><img src="images/icon-arrow-down.svg" alt=""></span>
+            <h4>Do you provide additional support?</h4><span><button class="accordian-btn"><img id="five" src="images/icon-arrow-down.svg" alt=""></button></span>
           </div>
-          <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+          <p class="answer five">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
         </div>
       </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
