Mobile responsiveness is added to the project

--- a/faq-accordion-card-main/index.html
+++ b/faq-accordion-card-main/index.html
@@ -11,7 +11,8 @@
     <div class="container">
       <div id="img-container">
           <div class="bg-img">
-            <img src="images/illustration-woman-online-desktop.svg" alt="Woman Image">
+            <img class="desktop" src="images/illustration-woman-online-desktop.svg" alt="Woman Image">
+            <img class="mobile" src="images/illustration-woman-online-mobile.svg" alt="Woman Image mobile">
           </div>
           <div class="fg-img">
             <img src="images/illustration-box-desktop.svg" alt="foreground-box">
