added basic calculator styling, which is yet to be corrected and is not in accordance with the challenge design

--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Calculator app</title>
 </head>
@@ -16,10 +17,10 @@
       </div>
     </div>
     <div id="calc-display">
-      <div id="display-content"></div>
+      <div id="display-content">12347</div>
     </div>
     <div id="calc-operations">
-      <div id="calc-buttons">
+      <div id="calc-sm-buttons">
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
@@ -36,6 +37,8 @@
         <button class="btn">0</button>
         <button class="btn" id="divide-btn">/</button>
         <button class="btn" id="multiply-btn">X</button>
+      </div>
+      <div id="calc-lg-buttons">
         <button class="btn" id="reset-btn">RESET</button>
         <button class="btn" id="ans-btn">=</button>
       </div>
