--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -12,8 +12,17 @@
 <body>
   <div id="calc-outer">
     <div id="calc-head">
-      <h2>calc</h2>
-      <div class="slider">
+      <h1>calc</h1>
+      <div class="calc-slider">
+        <h5>THEME</h5>
+        <div class="slider">
+          <div class="slider-value">
+            <h4>1</h4>
+            <h4>2</h4>
+            <h4>3</h4>
+          </div>
+          <input type="range" name="theme" id="calc-theme" min="1" max="3">
+        </div>
       </div>
     </div>
     <div id="calc-display">
