added js file to change theme color added some objects according the theme specs

--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -21,7 +21,7 @@
             <h4>2</h4>
             <h4>3</h4>
           </div>
-          <input type="range" name="theme" id="calc-theme" min="1" max="3">
+          <input type="range" name="theme" id="calc-theme" min="1" max="3" value="1">
         </div>
       </div>
     </div>
@@ -53,5 +53,6 @@
       </div>
     </div>
   </div>
+  <script src="themeChange.js"></script>
 </body>
 </html>
