added the operate functionality to  buttons along with the display of screen

--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -26,7 +26,8 @@
       </div>
     </div>
     <div id="calc-display">
-      <div id="display-content">12347</div>
+      <div id="sub-display"></div>
+      <div id="display-content"></div>
     </div>
     <div id="calc-operations">
       <div id="calc-sm-buttons">
@@ -54,5 +55,6 @@
     </div>
   </div>
   <script src="themeChange.js"></script>
+  <script src="calcOperations.js"></script>
 </body>
 </html>
