completed the card components, sign-up and success styling along with adding responsiveness accordingly

--- a/newsletter-sign-up-with-success-message-main/index.html
+++ b/newsletter-sign-up-with-success-message-main/index.html
@@ -30,7 +30,8 @@
         </form>
       </div>
       <div class="card-img">
-        <img src="assets/images/illustration-sign-up-desktop.svg" alt="Sign-Up Card Image">
+        <img class='desktop' src="assets/images/illustration-sign-up-desktop.svg" alt="Sign-Up Card Image">
+        <img class="mobile" src="assets/images/illustration-sign-up-mobile.svg" alt="Sign-Up card mobile image">
       </div>
     </div>
     <div id="success-mssg" class="card-container">
