--- a/newsletter-sign-up-with-success-message-main/index.html
+++ b/newsletter-sign-up-with-success-message-main/index.html
@@ -23,8 +23,11 @@
         </div>
         <form action="#" method="post">
           <fieldset>
-          <label for="email">Email Address</label>
-          <input type="email" name="email" id="email" placeholder="email@company.com">
+            <div class="validation">
+              <label for="email">Email Address</label>
+              <p id="validation-mssg"></p>
+            </div>
+          <input type="email" name="email" id="email" placeholder="email@company.com" required>
           </fieldset>
           <button type="submit">Subscribe to monthly newsletter</button>
         </form>
@@ -47,5 +50,6 @@
         </div>
       </div>
     </div>
+    <script src="flip.js"></script>
 </body>
 </html>
