--- a/clipboard-landing-page-master/index.html
+++ b/clipboard-landing-page-master/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Clipboard landing page</title>
-  
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -14,21 +14,21 @@
         <img src="images/logo.svg" alt="Clipboard Logo">
       </div>
       <div class="intro">
-        <h1>A history of everything you copy</h1>
+        <h1 class="headings" >A history of everything you copy</h1>
         <p>Clipboard allows you to track and organize everything you 
           copy. Instantly access your clipboard on all your devices.
         </p>
       </div>
       <div class="btn-section">
-        <button id="ios-btn">Download for iOS</button>
-        <button id="mac-btn">Download for Mac</button>
+        <button id="ios-btn" class="btn">Download for iOS</button>
+        <button id="mac-btn" class="btn">Download for Mac</button>
       </div>
     </div>
   </header>
   <main>
     <div id="section-1">
       <div class="horizontal-text">
-        <h3>Keep track of your snippets</h3>
+        <h2 class="headings" >Keep track of your snippets</h2>
         <p>Clipboard instantly stores any item you copy in the cloud, 
           meaning you can access your snippets immediately on all your 
           devices. Our Mac and iOS apps will help you organize everything.</p>
@@ -39,15 +39,15 @@
         </div>
         <aside>
           <div class="aside-text">
-            <h4>Quick Search</h4>
+            <h3 class="headings" >Quick Search</h3>
             <p>Easily search your snippets by content, category, web address, application, and more.</p>
           </div>
           <div class="aside-text">
-            <h4>iCloud Sync</h4>
+            <h3 class="headings" >iCloud Sync</h3>
             <p>Instantly saves and syncs snippets across all your devices.</p>
           </div>
           <div class="aside-text">
-            <h4>Complete History</h4>
+            <h3 class="headings" >Complete History</h3>
             <p>Retrieve any snippets from the first moment you started using the app.</p>
           </div>
         </aside>
@@ -56,7 +56,7 @@
     </div>
     <div id="section-2">
       <div class="horizontal-text">
-        <h3>Access Clipboard anywhere</h3>
+        <h2 class="headings" >Access Clipboard anywhere</h2>
         <p>Whether you're on the go, or at your computer, you can access all your Clipboard 
           snippets in a few simple clicks.</p>
       </div>
@@ -68,23 +68,23 @@
     </div>
     <div id="section-3">
       <div class="horizontal-text">
-        <h3>Supercharge your workflow</h3>
+        <h2 class="headings" >Supercharge your workflow</h2>
         <p>We've got the tools to boost your productivity.</p>
       </div>
       <div class="icon-vertical">
         <div class="icon-sections">
           <img src="images/icon-blacklist.svg" alt="blacklist-icon">
-          <h4>Create blacklists</h4>
+          <h3 class="headings" >Create blacklists</h3>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </div>
         <div class="icon-sections">
-          <img src="images/icon-blacklist.svg" alt="blacklist-icon">
-          <h4>Plain text snippets</h4>
+          <img src="images/icon-text.svg" alt="text-snippet-icon">
+          <h3 class="headings" >Plain text snippets</h3>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
         </div>
         <div class="icon-sections">
-          <img src="images/icon-blacklist.svg" alt="blacklist-icon">
-          <h4>Sneak preview</h4>
+          <img src="images/icon-preview.svg" alt="preview-icon">
+          <h3 class="headings" >Sneak preview</h3>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </div>
       </div>
@@ -97,14 +97,14 @@
       <div class="icon-img"><img src="images/logo-vector-graphics.png" alt="vector-graphics-logo"></div>
     </div>
     <div id="section-5">
-      <div class="horizontal-section">
-        <h3>Clipboard for iOS and Mac OS</h3>
+      <div class="horizontal-text">
+        <h2 class="headings" >Clipboard for iOS and Mac OS</h2>
         <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
           and you're ready to start adding to your clipboard.</p>
       </div>
       <div class="btn-section">
-        <button id="ios-btn">Download for iOS</button>
-        <button id="mac-btn">Download for Mac</button>
+        <button id="ios-btn" class="btn">Download for iOS</button>
+        <button id="mac-btn" class="btn">Download for Mac</button>
       </div>
     </div>
   </main>
@@ -114,10 +114,10 @@
     </div>
     <ul class="footer-links">
       <li><a href="#">FAQs</a></li>
-      <li><a href="#">Contact Us</a></li>
       <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Press Kit</a></li>
       <li><a href="#">Install Guide</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Press Kit</a></li>
     </ul>
     <div class="footer-icons">
       <img src="images/icon-facebook.svg" alt="facebook-logo">
