--- a/manage-landing-page-master/public/index.html
+++ b/manage-landing-page-master/public/index.html
@@ -124,9 +124,68 @@
             </p>
           </div>
         </div>
-
       </div>
     </div>
+  </section>
+  <section id="testimonials">
+    <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+      <h2 class="text-4xl font-bold text-center">
+        What they've said
+      </h2>
+      <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+        <div class="flex flex-col items-center p-6 space-y-6 rounded-lg 
+        bg-veryLightGray md:w-1/3">
+          <img src="../images/avatar-anisha.png" class="w-16 -mt-14" alt="">
+          <h5 class="text-lg font-bold">Anisha Li</h5>
+          <p class="tex-sm text-darkGrayishBlue">“Manage has supercharged our team's
+             workflow. The ability to maintain visibility on larger milestones at all 
+             times keeps everyone motivated.”</p>
+        </div>
+
+        <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg 
+        bg-veryLightGray md:w-1/3 md:flex">
+          <img src="../images/avatar-ali.png" class="w-16 -mt-14" alt="">
+          <h5 class="text-lg font-bold">Ali Bravo</h5>
+          <p class="tex-sm text-darkGrayishBlue">“We have been able to cancel so many other
+            subscriptions since using Manage. There is no more cross-channel confusion and 
+            everyone is much more focused.”</p>
+        </div>
+
+        <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg 
+        bg-veryLightGray md:w-1/3 md:flex">
+          <img src="../images/avatar-richard.png" class="w-16 -mt-14" alt="">
+          <h5 class="text-lg font-bold">Richard Watts</h5>
+          <p class="tex-sm text-darkGrayishBlue">“Manage allows us to provide structure and
+            process. It keeps us organized and focused. I can't stop recommending them
+            to everyone I talk to!”</p>
+        </div>
+
+        <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg 
+        bg-veryLightGray md:w-1/3 md:flex">
+          <img src="../images/avatar-shanai.png" class="w-16 -mt-14" alt="">
+          <h5 class="text-lg font-bold">Shanai Gough</h5>
+          <p class="tex-sm text-darkGrayishBlue">“Their software allows us to track,
+            manage and collaborate on our projects from anywhere. It keeps the whole 
+            team in-sync without being intrusive.”</p>
+        </div>
+      </div>
+      <div class="my-16">
+        <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+        >Get Started</a>
+      </div>
+    </div>
+  </section>
+  <section id="cta" class="bg-brightRed">
+    <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto
+    space-y12 md:flex-row md:space-y-0">
+    <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl
+    md:max-w-xl md:text-left">Simplify how your team works today.</h2>
+    <div class="mt-14 md:mt-0">
+      <a href="#" class="p-3 px-6 pt-2 text-brightRed shadow-2xl bg-white
+      rounded-full baseline hover:bg-gray-900"
+      >Get Started</a>
+    </div>
+  </div>
   </section>
 </body>
 </html>
