--- a/manage-landing-page-master/public/index.html
+++ b/manage-landing-page-master/public/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- nav-bar -->
-  <nav class="relative container mx-aut p-6">
+  <nav class="relative container mx-auto p-6">
     <div class="flex items-center justify-between">
       <div class="pt-2">
         <img src="../images/logo.svg" alt="">
@@ -33,7 +33,7 @@
       </button>
     </div>
     <div class="md:hidden">
-      <div id="menu" class="absolute flex flex-col items-center hidden self-end py-8 mt-10 space-y-6
+      <div id="menu" class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6
         font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
         <a href="#" class='hover:text-darkGrayishBlue'>Pricing</a>
         <a href="#" class='hover:text-darkGrayishBlue'>Product</a>
@@ -257,5 +257,6 @@
       </div>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
